--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +109,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### List of Metadata #####\n",
+      "\n",
+      "[{'id': '1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'Test.txt',\n",
+      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
+      " {'id': '1Lde5wC3wacAmUIIiVZ4qDFWd89IouOft',\n",
+      "  'mimeType': 'application/vnd.google-apps.folder',\n",
+      "  'name': 'sub_folder2',\n",
+      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
+      " {'id': '17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ',\n",
+      "  'mimeType': 'application/vnd.google-apps.folder',\n",
+      "  'name': 'sub_folder1',\n",
+      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
+      " {'id': '1T0Qb5QsHh9C3lAgDzCtHWhPTZtoD98X2',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'test2.txt',\n",
+      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
+      " {'id': '1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'test1.txt',\n",
+      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']}]\n"
+     ]
+    }
+   ],
    "source": [
     "FOLDER_ID = \"1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4\"\n",
     "\n",
@@ -139,9 +169,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### List of Metadata #####\n",
+      "\n",
+      "[{'id': '1hlfZu-LmjCYKduwE7ft8keoEQi_6_t4t',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_1.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']},\n",
+      " {'id': '1gmtqZvJsNku3pbw2XIDFxP2arc_vMaH7',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_2.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']},\n",
+      " {'id': '1Ei3-514r28E1HYAMYxrI7aE9l2adT1hX',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_3.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']}]\n",
+      "\n",
+      "##### nextPageToken #####\n",
+      "\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XfCd7j2Vgamw7bVAMHI0pLhgD_crjD1HNg3dNP12DV5hMpCcxih9X1rbpa7LR6oGQ76oaPT7LZVDUy4PsbP_BPXvYsGQ=\n",
+      "\n",
+      "##### List of Metadata #####\n",
+      "\n",
+      "[{'id': '1BJyvc14JilzVckwU4I6I4IeLaH8FiWgl',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_4.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']},\n",
+      " {'id': '1PnCSnQe8o0KAhk2K_ZEg3EVxmKNY3QEL',\n",
+      "  'mimeType': 'text/plain',\n",
+      "  'name': 'sub_file_5.txt',\n",
+      "  'parents': ['17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ']}]\n",
+      "\n",
+      "##### nextPageToken #####\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "FOLDER_ID = \"17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ\"\n",
     "page_token = None\n",
@@ -180,9 +251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### File's MetaData #####\n",
+      "\n",
+      "{'id': '1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5',\n",
+      " 'kind': 'drive#file',\n",
+      " 'mimeType': 'text/plain',\n",
+      " 'name': 'Test.txt',\n",
+      " 'size': '10'}\n",
+      "\n",
+      "\n",
+      "##### Folder's MetaData #####\n",
+      "\n",
+      "{'id': '1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4',\n",
+      " 'kind': 'drive#file',\n",
+      " 'mimeType': 'application/vnd.google-apps.folder',\n",
+      " 'name': 'sample1'}\n"
+     ]
+    }
+   ],
    "source": [
     "FILE_ID = \"1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5\"  # 샘플로 읽어볼 파일의 ID\n",
     "FOLDER_ID = \"1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4\"  # 샘플로 읽어볼 폴더의 ID\n",
@@ -209,11 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Download Start #####\n",
+      "\n",
+      "Download 100%.\n",
+      "\n",
+      "\n",
+      "##### Download Result #####\n",
+      "\n",
+      "b'Test Body~'\n"
+     ]
+    }
+   ],
    "source": [
     "from googleapiclient.http import MediaIoBaseDownload\n",
     "\n",
@@ -246,9 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Upload Result #####\n",
+      "\n",
+      "{'kind': 'drive#file', 'id': '1K36UUHJ0gymqWzmrxsOIU4OgUkuiOl7T', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+     ]
+    }
+   ],
    "source": [
     "from googleapiclient.http import MediaFileUpload\n",
     "\n",
@@ -276,9 +398,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Upload Result #####\n",
+      "\n",
+      "{'kind': 'drive#file', 'id': '19aSrY6fCjIhXDeGej3XCJd1qEBJusrAJ', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+     ]
+    }
+   ],
    "source": [
     "from googleapiclient.http import MediaIoBaseUpload\n",
     "\n",
@@ -312,9 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Upload Result #####\n",
+      "\n",
+      "{'kind': 'drive#file', 'id': '19aSrY6fCjIhXDeGej3XCJd1qEBJusrAJ', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+     ]
+    }
+   ],
    "source": [
     "FILE_ID = response[\"id\"]  # 위에서 메모리 업로드로 Create된 파일의 ID\n",
     "\n",
@@ -346,20 +491,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Delete Result #####\n",
+      "\n",
+      "Complete\n"
+     ]
+    }
+   ],
    "source": [
     "response = drive.files().delete(fileId=FILE_ID).execute()\n",
     "\n",
     "print(\"\\n##### Delete Result #####\\n\")\n",
     "\n",
     "if 0 == len(response):\n",
-    "    print(\"delete complete\")\n",
-    "else\n",
-    "    print(\"failed to delete\")"
+    "    print(\"Complete\")\n",
+    "else:\n",
+    "    print(\"Failed to delete\")"
    ]
   },
   {
