--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -23,7 +23,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# aa"
+    "## 1. Google Drive API 사용설정\n",
+    "***\n",
+    "\n",
+    "\n",
+    "### 1.1. 프로젝트 선택 또는 새 프로젝트 생성\n",
+    "***\n",
+    "\n",
+    "[Google API Console](https://console.developers.google.com/)에서 Google Drive API를 사용할 프로젝트를 선택한다.  \n",
+    "프로젝트가 없다면 다음과 같이 새 프로젝트를 만든다.\n",
+    "\n",
+    "![새 프로젝트 생성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/mk_project.gif)\n",
+    "\n",
+    "\n",
+    "### 1.2. Google Drive API 사용설정\n",
+    "***\n",
+    "\n",
+    "![API 사용설정](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/enable_gd_api.gif)\n",
+    "\n",
+    "\n",
+    "### 1.3. 사용자 인증 정보 생성\n",
+    "***\n",
+    "\n",
+    "서버에서 사용할 것이기 때문에 서비스 계정 키를 만든다.  \n",
+    "다운로드되는 서비스 계정 키는 다시 받을 수 없기 때문에 잘 보관하자.\n",
+    "\n",
+    "![서비스 계정 키 생성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/mk_service_key.gif)\n",
+    "\n",
+    "\n",
+    "### 1.4. Google Drive의 폴더에 권한설정\n",
+    "***\n",
+    "\n",
+    "서비스 계정의 이메일로 사용할 폴더에 권한을 준다.\n",
+    "\n",
+    "![폴더에 권한](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/set_auth_to_folder.gif)\n",
+    "\n",
+    "### 1.5. 공통적으로 사용하는 코드\n",
+    "***"
    ]
   },
   {
@@ -158,7 +194,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XKTGT5qHsaDYCEsVHdOjblKWXrphAvxcnIqAYPYc7anrW4Uf18XtuIw8XyF15ogM4pcgLPopfhCEl64HKSouBrXcVMxE=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XsH6ZI5JUh8IO0qc_SeQO2Ly2pPgxY1U8cdczGLRQ3qx0LWTfAi_WNLS8dsAQxj4MOFO2YzMgJsYMgi6MjIUu054eYmw=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -331,7 +367,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1sbqSV0LYO93xUy3INVQ0_m1SKQPMPNsu', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1_I-1xpfrUtDzzM1ZwApY4k2cWg-OpQfc', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -373,7 +409,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1q75y85uIhutD-irJ717cGw5k0gR_SvcY', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1wnf9Uby72YpuJg59JWTJJflB33wYsCsA', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -420,7 +456,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1q75y85uIhutD-irJ717cGw5k0gR_SvcY', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1wnf9Uby72YpuJg59JWTJJflB33wYsCsA', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
