--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -92,18 +92,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. 읽기\n",
+    "## 2. 기본적인 사용\n",
     "***\n",
     "\n",
     "\n",
-    "### 2.1. 특정 파일/폴더의 ID를 알아내기\n",
+    "### 2.1. 읽기\n",
+    "***\n",
+    "\n",
+    "\n",
+    "### 2.1.1. 특정 파일/폴더의 ID를 알아내기\n",
     "***\n",
     "\n",
     "![파일/폴더의 ID 알아내기](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/get_file_id.gif)\n",
     "\n",
     "\n",
     "\n",
-    "### 2.2. 특정 폴더 내 모든 폴더 및 파일들의 MetaData를 출력\n",
+    "### 2.1.2. 특정 폴더 내 모든 폴더 및 파일들의 MetaData를 출력\n",
     "***"
    ]
   },
@@ -161,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3. Paging\n",
+    "### 2.1.3. Paging\n",
     "***\n",
     "폴더내의 목록을 불러올 때 기본적으로 100개까지 불러오게 되며, pageSize에 값을 줘서 한 번에 조회되는 개수를 조절할 수 있다. (1 ~ 1000개)  \n",
     "조회하려는 목록이 한 번에 조회되는 목록보다 많을 때는 Paging 처리를 해야 한다."
@@ -194,7 +198,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XsH6ZI5JUh8IO0qc_SeQO2Ly2pPgxY1U8cdczGLRQ3qx0LWTfAi_WNLS8dsAQxj4MOFO2YzMgJsYMgi6MjIUu054eYmw=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XvjgAaZ-HBsBCkJ08pxMQ9PLpq6bKwSZ-_CpYlyK03eGZKU5uGCoSRxyijItMfRS0HYgausdZozDX4WyDT8NgfboA0eI=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -245,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4. 폴더/파일의 ID를 이용하여 Metadata를 출력\n",
+    "### 2.1.4. 폴더/파일의 ID를 이용하여 Metadata를 출력\n",
     "***"
    ]
   },
@@ -297,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5. 파일 다운로드\n",
+    "### 2.1.5. 파일 다운로드\n",
     "***"
    ]
   },
@@ -347,10 +351,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. 쓰기\n",
+    "## 2.2. 쓰기\n",
     "***\n",
     "\n",
-    "### 3.1. 파일 업로드\n",
+    "### 2.2.1. 파일 업로드\n",
     "***"
    ]
   },
@@ -367,7 +371,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1_I-1xpfrUtDzzM1ZwApY4k2cWg-OpQfc', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1bC5IUl4WIc4U6L8OsBPS2aaZBVdPcun2', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -392,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2. 메모리 업로드\n",
+    "### 2.2.2. 메모리 업로드\n",
     "***"
    ]
   },
@@ -409,7 +413,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1wnf9Uby72YpuJg59JWTJJflB33wYsCsA', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1KtLLemKtRmYwFLP0ZVPpr4CB7oEiXHzm', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -440,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. 수정\n",
+    "## 2.3. 수정\n",
     "***"
    ]
   },
@@ -456,7 +460,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1wnf9Uby72YpuJg59JWTJJflB33wYsCsA', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1KtLLemKtRmYwFLP0ZVPpr4CB7oEiXHzm', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -485,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. 삭제\n",
+    "## 2.4. 삭제\n",
     "***"
    ]
   },
@@ -516,6 +520,195 @@
     "    print(\"Complete\")\n",
     "else:\n",
     "    print(\"Failed to delete\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 활용\n",
+    "***\n",
+    "\n",
+    "\n",
+    "## 3.1. 일정한 크기만큼 잘라서 다운로드\n",
+    "***\n",
+    "\n",
+    "\n",
+    "### 3.1.1. 데이터를 업로드\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Raw Data #####\n",
+      "\n",
+      "       date   open   high    low  close       vol\n",
+      "0  20190215  46750  46850  45650  46050  10554643\n",
+      "1  20190218  46500  46850  45850  46200   8183728\n",
+      "2  20190219  45850  46150  45450  45950   6741395\n",
+      "3  20190220  46750  47100  46500  46900  11506720\n",
+      "4  20190221  46500  47200  46200  46950   8694009\n",
+      "5  20190222  46500  47150  46450  47150   6895772\n",
+      "6  20190225  47400  47550  47050  47350   7484716\n",
+      "7  20190226  47350  47450  46500  46750   7985547\n",
+      "8  20190227  47000  47250  46750  46750   8045211\n",
+      "9  20190228  46400  46500  45100  45100  23569321\n",
+      "\n",
+      "##### Binary Data #####\n",
+      "\n",
+      "b'\\x07\\x144\\x01\\x9e\\xb6\\x00\\x00\\x02\\xb7\\x00\\x00R\\xb2\\x00\\x00\\xe2\\xb3\\x00\\x00\\x13\\r\\xa1\\x00\\n\\x144\\x01\\xa4\\xb5\\x00\\x00\\x02\\xb7\\x00\\x00\\x1a\\xb3\\x00\\x00x\\xb4\\x00\\x00\\xb0\\xdf|\\x00\\x0b\\x144\\x01\\x1a\\xb3\\x00\\x00F\\xb4\\x00\\x00\\x8a\\xb1\\x00\\x00~\\xb3\\x00\\x00\\x93\\xddf\\x00\\x0c\\x144\\x01\\x9e\\xb6\\x00\\x00\\xfc\\xb7\\x00\\x00\\xa4\\xb5\\x00\\x004\\xb7\\x00\\x00 \\x94\\xaf\\x00\\r\\x144\\x01\\xa4\\xb5\\x00\\x00`\\xb8\\x00\\x00x\\xb4\\x00\\x00f\\xb7\\x00\\x00\\xf9\\xa8\\x84\\x00\\x0e\\x144\\x01\\xa4\\xb5\\x00\\x00.\\xb8\\x00\\x00r\\xb5\\x00\\x00.\\xb8\\x00\\x00\\x9c8i\\x00\\x11\\x144\\x01(\\xb9\\x00\\x00\\xbe\\xb9\\x00\\x00\\xca\\xb7\\x00\\x00\\xf6\\xb8\\x00\\x00,5r\\x00\\x12\\x144\\x01\\xf6\\xb8\\x00\\x00Z\\xb9\\x00\\x00\\xa4\\xb5\\x00\\x00\\x9e\\xb6\\x00\\x00\\x8b\\xd9y\\x00\\x13\\x144\\x01\\x98\\xb7\\x00\\x00\\x92\\xb8\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9b\\xc2z\\x00\\x14\\x144\\x01@\\xb5\\x00\\x00\\xa4\\xb5\\x00\\x00,\\xb0\\x00\\x00,\\xb0\\x00\\x00\\xa9\\xa3g\\x01'\n",
+      "\n",
+      "##### Length of Binary Data #####\n",
+      "\n",
+      "240\n",
+      "\n",
+      "\n",
+      "##### Upload Result #####\n",
+      "\n",
+      "{'kind': 'drive#file', 'id': '14gyrLa3ZWqU89aNBt81H8cEaex40Ebo-', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import struct\n",
+    "import pandas as pd\n",
+    "\n",
+    "FOLDER_ID = \"1nWQXXoOGoOIsEJk5GLvUmVqWACWy53Ho\"  # 여기에 업로드\n",
+    "\n",
+    "df = pd.read_csv(\"day_005930.csv\")\n",
+    "print(\"\\n##### Raw Data #####\\n\")\n",
+    "print(df)\n",
+    "\n",
+    "buffer = io.BytesIO()\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    buffer.write(struct.pack(\"iiiiii\", row[\"date\"], row[\"open\"], row[\"high\"], row[\"low\"], row[\"close\"], row[\"vol\"]))\n",
+    "\n",
+    "print(\"\\n##### Binary Data #####\\n\")\n",
+    "print(buffer.getvalue())\n",
+    "\n",
+    "print(\"\\n##### Length of Binary Data #####\\n\")\n",
+    "print(len(buffer.getvalue()))\n",
+    "\n",
+    "meta_data = {\n",
+    "    \"name\": \"day_005930.bry\",\n",
+    "    \"parents\": [FOLDER_ID],\n",
+    "}\n",
+    "\n",
+    "uploader = MediaIoBaseUpload(fd=buffer, mimetype=\"application/octet-stream\")\n",
+    "response = drive.files().create(\n",
+    "    body=meta_data, \n",
+    "    media_body=uploader\n",
+    ").execute()\n",
+    "\n",
+    "print(\"\\n\\n##### Upload Result #####\\n\")\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1.2. 데이터를 다운로드\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Download Start #####\n",
+      "\n",
+      "b'\\x07\\x144\\x01\\x9e\\xb6\\x00\\x00\\x02\\xb7\\x00\\x00R\\xb2\\x00\\x00\\xe2\\xb3\\x00\\x00\\x13\\r\\xa1\\x00'\n",
+      "(20190215, 46750, 46850, 45650, 46050, 10554643)\n",
+      "Download 10%\n",
+      "\n",
+      "b'\\n\\x144\\x01\\xa4\\xb5\\x00\\x00\\x02\\xb7\\x00\\x00\\x1a\\xb3\\x00\\x00x\\xb4\\x00\\x00\\xb0\\xdf|\\x00'\n",
+      "(20190218, 46500, 46850, 45850, 46200, 8183728)\n",
+      "Download 20%\n",
+      "\n",
+      "b'\\x0b\\x144\\x01\\x1a\\xb3\\x00\\x00F\\xb4\\x00\\x00\\x8a\\xb1\\x00\\x00~\\xb3\\x00\\x00\\x93\\xddf\\x00'\n",
+      "(20190219, 45850, 46150, 45450, 45950, 6741395)\n",
+      "Download 30%\n",
+      "\n",
+      "b'\\x0c\\x144\\x01\\x9e\\xb6\\x00\\x00\\xfc\\xb7\\x00\\x00\\xa4\\xb5\\x00\\x004\\xb7\\x00\\x00 \\x94\\xaf\\x00'\n",
+      "(20190220, 46750, 47100, 46500, 46900, 11506720)\n",
+      "Download 40%\n",
+      "\n",
+      "b'\\r\\x144\\x01\\xa4\\xb5\\x00\\x00`\\xb8\\x00\\x00x\\xb4\\x00\\x00f\\xb7\\x00\\x00\\xf9\\xa8\\x84\\x00'\n",
+      "(20190221, 46500, 47200, 46200, 46950, 8694009)\n",
+      "Download 50%\n",
+      "\n",
+      "b'\\x0e\\x144\\x01\\xa4\\xb5\\x00\\x00.\\xb8\\x00\\x00r\\xb5\\x00\\x00.\\xb8\\x00\\x00\\x9c8i\\x00'\n",
+      "(20190222, 46500, 47150, 46450, 47150, 6895772)\n",
+      "Download 60%\n",
+      "\n",
+      "b'\\x11\\x144\\x01(\\xb9\\x00\\x00\\xbe\\xb9\\x00\\x00\\xca\\xb7\\x00\\x00\\xf6\\xb8\\x00\\x00,5r\\x00'\n",
+      "(20190225, 47400, 47550, 47050, 47350, 7484716)\n",
+      "Download 70%\n",
+      "\n",
+      "b'\\x12\\x144\\x01\\xf6\\xb8\\x00\\x00Z\\xb9\\x00\\x00\\xa4\\xb5\\x00\\x00\\x9e\\xb6\\x00\\x00\\x8b\\xd9y\\x00'\n",
+      "(20190226, 47350, 47450, 46500, 46750, 7985547)\n",
+      "Download 80%\n",
+      "\n",
+      "b'\\x13\\x144\\x01\\x98\\xb7\\x00\\x00\\x92\\xb8\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9b\\xc2z\\x00'\n",
+      "(20190227, 47000, 47250, 46750, 46750, 8045211)\n",
+      "Download 90%\n",
+      "\n",
+      "b'\\x14\\x144\\x01@\\xb5\\x00\\x00\\xa4\\xb5\\x00\\x00,\\xb0\\x00\\x00,\\xb0\\x00\\x00\\xa9\\xa3g\\x01'\n",
+      "(20190228, 46400, 46500, 45100, 45100, 23569321)\n",
+      "Download 100%\n",
+      "\n",
+      "\n",
+      "##### Done #####\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\n",
+    "CHUNK_SIZE = 24\n",
+    "\n",
+    "\n",
+    "class BufferHandler(io.BytesIO):\n",
+    "    def __init__(self):\n",
+    "        super(BufferHandler, self).__init__()\n",
+    "        self.buffer = None\n",
+    "\n",
+    "    def write(self, data):\n",
+    "        self.buffer = data\n",
+    "        super(BufferHandler, self).write(data)\n",
+    "\n",
+    "        \n",
+    "print(\"\\n##### Download Start #####\\n\")\n",
+    "request = drive.files().get_media(fileId=FILE_ID)\n",
+    "buffer_handler = BufferHandler()\n",
+    "downloader = MediaIoBaseDownload(buffer_handler, request, chunksize=CHUNK_SIZE - 1)\n",
+    "done = False\n",
+    "\n",
+    "while done is False:\n",
+    "    status, done = downloader.next_chunk()\n",
+    "    print(buffer_handler.buffer)\n",
+    "    print(struct.unpack(\"iiiiii\", buffer_handler.buffer))\n",
+    "    print(\"Download %d%%\\n\" % int(status.progress() * 100))\n",
+    "\n",
+    "print(\"##### Done #####\\n\")"
    ]
   },
   {
