파일명으로 찾기 추가

--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -107,13 +107,17 @@
     "\n",
     "\n",
     "\n",
-    "### 2.1.2. 특정 폴더 내 모든 폴더 및 파일들의 MetaData를 출력\n",
-    "***"
+    "### 2.1.2. 파일/폴더 검색\n",
+    "***\n",
+    "\n",
+    "query를 이용하여 원하는 파일 또는 폴더를 검색할 수 있다.  \n",
+    "참조: <https://developers.google.com/drive/api/v3/search-parameters>  \n",
+    "다음은 특정 폴더에 있는 test1.txt라는 파일을 찾는 예제이다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -121,28 +125,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "##### List of Metadata #####\n",
+      "##### Metadata #####\n",
       "\n",
-      "[{'id': '1EFzqg-bfKXOjHP3q7NNUM6QYuEln8sR5',\n",
-      "  'mimeType': 'text/plain',\n",
-      "  'name': 'Test.txt',\n",
-      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
-      " {'id': '1Lde5wC3wacAmUIIiVZ4qDFWd89IouOft',\n",
-      "  'mimeType': 'application/vnd.google-apps.folder',\n",
-      "  'name': 'sub_folder2',\n",
-      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
-      " {'id': '17lrAKEA73zf_EAuimoMmyebVAg-8p2GZ',\n",
-      "  'mimeType': 'application/vnd.google-apps.folder',\n",
-      "  'name': 'sub_folder1',\n",
-      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
-      " {'id': '1T0Qb5QsHh9C3lAgDzCtHWhPTZtoD98X2',\n",
-      "  'mimeType': 'text/plain',\n",
-      "  'name': 'test2.txt',\n",
-      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']},\n",
-      " {'id': '1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5',\n",
-      "  'mimeType': 'text/plain',\n",
-      "  'name': 'test1.txt',\n",
-      "  'parents': ['1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4']}]\n"
+      "[{'id': '1Gh1Xdgp9FLFfsf_20Ou_V_mULhz9ZXk5', 'name': 'test1.txt', 'mimeType': 'text/plain', 'size': '3'}]\n"
      ]
     }
    ],
@@ -150,15 +135,15 @@
     "FOLDER_ID = \"1kBvzgj9MIuDLNqN0cVZhR-wDDfvbKXH4\"\n",
     "\n",
     "response = drive.files().list(\n",
-    "    q=\"'{0}' in parents\".format(FOLDER_ID),\n",
+    "    q=\"'{0}' in parents and name = '{1}'\".format(FOLDER_ID, \"test1.txt\"),\n",
     "    spaces=\"drive\",\n",
-    "    fields=\"files(id, name, mimeType, parents)\"\n",
+    "    fields=\"files(id, name, mimeType, size)\"\n",
     ").execute()\n",
     "\n",
     "files = response.get(\"files\", [])\n",
     "\n",
-    "print(\"\\n##### List of Metadata #####\\n\")\n",
-    "pprint.pprint(files)"
+    "print(\"\\n##### Metadata #####\\n\")\n",
+    "print(files)"
    ]
   },
   {
@@ -173,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +183,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XvjgAaZ-HBsBCkJ08pxMQ9PLpq6bKwSZ-_CpYlyK03eGZKU5uGCoSRxyijItMfRS0HYgausdZozDX4WyDT8NgfboA0eI=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XM7Aa2sEUPkVxDFFaRZu7os5dvFx8XvpF2a0PezndDVEyEs875bFM4b9Djwbvxwz9ByMkZH_q5Wq8ygbU652Wb2Ga4LY=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
