--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XM7Aa2sEUPkVxDFFaRZu7os5dvFx8XvpF2a0PezndDVEyEs875bFM4b9Djwbvxwz9ByMkZH_q5Wq8ygbU652Wb2Ga4LY=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XrnUlXk1KtL-JlkY81j9l3JXRRg7Yql1qPahAts7Duggo-oaTiTuNVPeRvDzstwRxq_x76E_ww_sNfXqhD3IJpYZBTVs=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -356,7 +356,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1bC5IUl4WIc4U6L8OsBPS2aaZBVdPcun2', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1BMO-YbWOT0duajzbOyI_3UXm5VQxTkyJ', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -398,7 +398,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1KtLLemKtRmYwFLP0ZVPpr4CB7oEiXHzm', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1hcnnOc2LHn6U0OWK5uit675wdduFxqNP', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -445,7 +445,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1KtLLemKtRmYwFLP0ZVPpr4CB7oEiXHzm', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1hcnnOc2LHn6U0OWK5uit675wdduFxqNP', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -560,7 +560,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '14gyrLa3ZWqU89aNBt81H8cEaex40Ebo-', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
+      "{'kind': 'drive#file', 'id': '1kXzlKnsLDC48kW13mT2jQh-yuN86lLGI', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
      ]
     }
    ],
@@ -660,7 +660,6 @@
       "(20190228, 46400, 46500, 45100, 45100, 23569321)\n",
       "Download 100%\n",
       "\n",
-      "\n",
       "##### Done #####\n",
       "\n"
      ]
@@ -697,11 +696,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3.1.3. 원하는 범위만 다운로드\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### response #####\n",
+      "\n",
+      "{'alt-svc': 'quic=\":443\"; ma=2592000; v=\"46,44,43,39\"',\n",
+      " 'cache-control': 'private, max-age=0, must-revalidate',\n",
+      " 'content-disposition': 'attachment',\n",
+      " 'content-length': '24',\n",
+      " 'content-range': 'bytes 48-71/240',\n",
+      " 'content-type': 'application/octet-stream',\n",
+      " 'date': 'Mon, 01 Apr 2019 16:47:04 GMT',\n",
+      " 'expires': 'Mon, 01 Apr 2019 16:47:04 GMT',\n",
+      " 'server': 'UploadServer',\n",
+      " 'status': '206',\n",
+      " 'vary': 'Origin, X-Origin',\n",
+      " 'x-guploader-uploadid': 'AEnB2Uq8_XA-JzawM1HC396QPxevZ3bB7l3JYgnb-OYHk7Rzw9CNXsKZuXKgY-DE314vFZeK7ojVNfJITZ7ft-3xqfWGDIw_RjQJvcX-kn5sH_qrxOtCQXg'}\n",
+      "\n",
+      "##### content #####\n",
+      "\n",
+      "b'\\x0b\\x144\\x01\\x1a\\xb3\\x00\\x00F\\xb4\\x00\\x00\\x8a\\xb1\\x00\\x00~\\xb3\\x00\\x00\\x93\\xddf\\x00'\n",
+      "(20190219, 45850, 46150, 45450, 45950, 6741395)\n"
+     ]
+    }
+   ],
+   "source": [
+    "FILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\n",
+    "STRUCT_SIZE = 24\n",
+    "RCV_DATA_IDX = 2\n",
+    "\n",
+    "st_pos = (STRUCT_SIZE * RCV_DATA_IDX)\n",
+    "ed_pos = st_pos + STRUCT_SIZE - 1\n",
+    "\n",
+    "headers = {\n",
+    "    \"Range\": \"bytes={0}-{1}\".format(st_pos, ed_pos)\n",
+    "}\n",
+    "\n",
+    "resp, content = http_auth.request(\n",
+    "    uri=\"https://www.googleapis.com/drive/v3/files/{0}?alt=media\".format(FILE_ID),\n",
+    "    headers=headers\n",
+    ")\n",
+    "\n",
+    "print(\"\\n##### response #####\\n\")\n",
+    "pprint.pprint(resp)\n",
+    "\n",
+    "print(\"\\n##### content #####\\n\")\n",
+    "print(content)\n",
+    "print(struct.unpack(\"iiiiii\", content))"
+   ]
   }
  ],
  "metadata": {
