--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "코드를 실행해보기 위해선 다음의 파이썬 라이브러리들이 설치되어있어야 한다.  \n",
     "- google-api-python-client\n",
-    "- oauth2client\n",
+    "- google-auth-oauthlib\n",
     "\n",
     "Anaconda Prompt에서 다음과 같은 명령어로 설치한다.\n",
     "\n",
     "```sh\n",
     "pip install google-api-python-client\n",
-    "pip install oauth2client\n",
+    "pip install google-auth-oauthlib\n",
     "```"
    ]
   },
@@ -42,21 +42,17 @@
     "![API 사용설정](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/enable_gd_api.gif)\n",
     "\n",
     "\n",
+    "### 1.3. OAuth 동의 화면 설정\n",
+    "***\n",
+    "\n",
+    "![OAuth 동의 화면 설정](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/oauthconsent_screen.gif)\n",
+    "\n",
+    "\n",
     "### 1.3. 사용자 인증 정보 생성\n",
     "***\n",
     "\n",
-    "서버에서 사용할 것이기 때문에 서비스 계정 키를 만든다.  \n",
-    "다운로드되는 서비스 계정 키는 다시 받을 수 없기 때문에 잘 보관하자.\n",
+    "![사용자 인증 정보 생성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/mk_oauth_key.gif)\n",
     "\n",
-    "![서비스 계정 키 생성](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/mk_service_key.gif)\n",
-    "\n",
-    "\n",
-    "### 1.4. Google Drive의 폴더에 권한설정\n",
-    "***\n",
-    "\n",
-    "서비스 계정의 이메일로 사용할 폴더에 권한을 준다.\n",
-    "\n",
-    "![폴더에 권한](https://raw.githubusercontent.com/3x3x3/MediaFiles/master/google_drive/set_auth_to_folder.gif)\n",
     "\n",
     "### 1.5. 공통적으로 사용하는 코드\n",
     "***"
@@ -71,21 +67,41 @@
     "# -*- coding: utf-8 -*-\n",
     "import io\n",
     "import pprint\n",
+    "import pickle\n",
+    "import os.path\n",
     "from googleapiclient.discovery import build\n",
-    "from oauth2client.service_account import ServiceAccountCredentials\n",
-    "from httplib2 import Http\n",
+    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
+    "from google.auth.transport.requests import Request\n",
     "\n",
-    "# 다운 받은 서비스 계정 키의 파일명을 service_acc_key.json로 변경하거나 아래 코드를 변경\n",
-    "SERVICE_ACC_KEY_FILE_NAME = \"service_acc_key.json\"\n",
+    "# 다운 받은 키 파일명을 credentials.json로 변경하거나 아래 코드를 변경\n",
+    "CLIENT_SECRET_FILE_NAME = \"credentials.json\"\n",
+    "TOKEN_FILE_NAME = \"token.pickle\"\n",
     "\n",
     "# SCOPES에 들어가는 값들은 다음 URL을 참조: https://developers.google.com/drive/api/v3/about-auth\n",
     "SCOPES = [\n",
     "    \"https://www.googleapis.com/auth/drive\"\n",
     "]\n",
     "\n",
-    "credentials = ServiceAccountCredentials.from_json_keyfile_name(SERVICE_ACC_KEY_FILE_NAME, SCOPES)\n",
-    "http_auth = credentials.authorize(Http())\n",
-    "drive = build(\"drive\", \"v3\", http=http_auth)"
+    "creds = None\n",
+    "# The file token.pickle stores the user's access and refresh tokens, and is\n",
+    "# created automatically when the authorization flow completes for the first\n",
+    "# time.\n",
+    "if os.path.exists(TOKEN_FILE_NAME):\n",
+    "    with open(TOKEN_FILE_NAME, \"rb\") as token:\n",
+    "        creds = pickle.load(token)\n",
+    "# If there are no (valid) credentials available, let the user log in.\n",
+    "if not creds or not creds.valid:\n",
+    "    if creds and creds.expired and creds.refresh_token:\n",
+    "        creds.refresh(Request())\n",
+    "    else:\n",
+    "        flow = InstalledAppFlow.from_client_secrets_file(\n",
+    "            CLIENT_SECRET_FILE_NAME, SCOPES)\n",
+    "        creds = flow.run_local_server()\n",
+    "    # Save the credentials for the next run\n",
+    "    with open(TOKEN_FILE_NAME, \"wb\") as token:\n",
+    "        pickle.dump(creds, token)\n",
+    "\n",
+    "drive = build('drive', 'v3', credentials=creds)"
    ]
   },
   {
@@ -183,7 +199,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYrUqlHw7F3ZgiaUAV-V7a3XrnUlXk1KtL-JlkY81j9l3JXRRg7Yql1qPahAts7Duggo-oaTiTuNVPeRvDzstwRxq_x76E_ww_sNfXqhD3IJpYZBTVs=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY8jqCv7dgIJuLdrlUZyPZ8FywwCabE4RKhAv89vrfdQY07KRcQoRvHfsLehbBfko_d7JrU-Io91aHzh8Fp3WkZmiKpZ4o=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -356,7 +372,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1BMO-YbWOT0duajzbOyI_3UXm5VQxTkyJ', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1tFVQ9HbedZ3toX_I4QvhWibbXL2s4W2c', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -398,7 +414,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1hcnnOc2LHn6U0OWK5uit675wdduFxqNP', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1yPLjLuE4yxvvJ_cvg-sHTHP85nYuwUJK', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -445,7 +461,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1hcnnOc2LHn6U0OWK5uit675wdduFxqNP', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1yPLjLuE4yxvvJ_cvg-sHTHP85nYuwUJK', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -560,7 +576,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1kXzlKnsLDC48kW13mT2jQh-yuN86lLGI', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
+      "{'kind': 'drive#file', 'id': '1hIPlHXYLMW9JuiChShHiPHDPAn_YzPiq', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
      ]
     }
    ],
@@ -709,33 +725,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "##### response #####\n",
-      "\n",
-      "{'alt-svc': 'quic=\":443\"; ma=2592000; v=\"46,44,43,39\"',\n",
-      " 'cache-control': 'private, max-age=0, must-revalidate',\n",
-      " 'content-disposition': 'attachment',\n",
-      " 'content-length': '24',\n",
-      " 'content-range': 'bytes 48-71/240',\n",
-      " 'content-type': 'application/octet-stream',\n",
-      " 'date': 'Mon, 01 Apr 2019 16:47:04 GMT',\n",
-      " 'expires': 'Mon, 01 Apr 2019 16:47:04 GMT',\n",
-      " 'server': 'UploadServer',\n",
-      " 'status': '206',\n",
-      " 'vary': 'Origin, X-Origin',\n",
-      " 'x-guploader-uploadid': 'AEnB2Uq8_XA-JzawM1HC396QPxevZ3bB7l3JYgnb-OYHk7Rzw9CNXsKZuXKgY-DE314vFZeK7ojVNfJITZ7ft-3xqfWGDIw_RjQJvcX-kn5sH_qrxOtCQXg'}\n",
-      "\n",
-      "##### content #####\n",
-      "\n",
-      "b'\\x0b\\x144\\x01\\x1a\\xb3\\x00\\x00F\\xb4\\x00\\x00\\x8a\\xb1\\x00\\x00~\\xb3\\x00\\x00\\x93\\xddf\\x00'\n",
-      "(20190219, 45850, 46150, 45450, 45950, 6741395)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nFILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\\nSTRUCT_SIZE = 24\\nRCV_DATA_IDX = 2\\n\\nst_pos = (STRUCT_SIZE * RCV_DATA_IDX)\\ned_pos = st_pos + STRUCT_SIZE - 1\\n\\nheaders = {\\n    \"Range\": \"bytes={0}-{1}\".format(st_pos, ed_pos)\\n}\\n\\nresp, content = http_auth.request(\\n    uri=\"https://www.googleapis.com/drive/v3/files/{0}?alt=media\".format(FILE_ID),\\n    headers=headers\\n)\\n\\nprint(\"\\n##### response #####\\n\")\\npprint.pprint(resp)\\n\\nprint(\"\\n##### content #####\\n\")\\nprint(content)\\nprint(struct.unpack(\"iiiiii\", content))\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "FILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\n",
     "STRUCT_SIZE = 24\n",
     "RCV_DATA_IDX = 2\n",
@@ -757,7 +758,8 @@
     "\n",
     "print(\"\\n##### content #####\\n\")\n",
     "print(content)\n",
-    "print(struct.unpack(\"iiiiii\", content))"
+    "print(struct.unpack(\"iiiiii\", content))\n",
+    "\"\"\""
    ]
   }
  ],
