Batch Requests 추가 샘플로 올릴 csv파일을 더 작게

--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -101,6 +101,7 @@
     "    with open(TOKEN_FILE_NAME, \"wb\") as token:\n",
     "        pickle.dump(creds, token)\n",
     "\n",
+    "# build()로 리턴되는 객체는 https://developers.google.com/resources/api-libraries/documentation/drive/v3/python/latest/?hl=ko를 참조한다.\n",
     "drive = build('drive', 'v3', credentials=creds)"
    ]
   },
@@ -199,7 +200,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY8jqCv7dgIJuLdrlUZyPZ8FywwCabE4RKhAv89vrfdQY07KRcQoRvHfsLehbBfko_d7JrU-Io91aHzh8Fp3WkZmiKpZ4o=\n",
+      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY850pCgR8ZGIiwtfc_Js1gbg2ij8XBNDfraVHRcYHj5JdJqu5gV3oOKLFTHIEr5h8RleIf44ADy-3BnhAo7yekIUsdP9I=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -372,7 +373,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1tFVQ9HbedZ3toX_I4QvhWibbXL2s4W2c', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1XuidDMUCSsDHuhUXDvbUsXL8AuFmbdm7', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -414,7 +415,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1yPLjLuE4yxvvJ_cvg-sHTHP85nYuwUJK', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1Sn6adya8VU33nnrIhxZb7EEIr7Th_eiA', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -461,7 +462,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1yPLjLuE4yxvvJ_cvg-sHTHP85nYuwUJK', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1Sn6adya8VU33nnrIhxZb7EEIr7Th_eiA', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -554,29 +555,24 @@
       "##### Raw Data #####\n",
       "\n",
       "       date   open   high    low  close       vol\n",
-      "0  20190215  46750  46850  45650  46050  10554643\n",
-      "1  20190218  46500  46850  45850  46200   8183728\n",
-      "2  20190219  45850  46150  45450  45950   6741395\n",
-      "3  20190220  46750  47100  46500  46900  11506720\n",
-      "4  20190221  46500  47200  46200  46950   8694009\n",
-      "5  20190222  46500  47150  46450  47150   6895772\n",
-      "6  20190225  47400  47550  47050  47350   7484716\n",
-      "7  20190226  47350  47450  46500  46750   7985547\n",
-      "8  20190227  47000  47250  46750  46750   8045211\n",
-      "9  20190228  46400  46500  45100  45100  23569321\n",
+      "0  20190222  46500  47150  46450  47150   6895772\n",
+      "1  20190225  47400  47550  47050  47350   7484716\n",
+      "2  20190226  47350  47450  46500  46750   7985547\n",
+      "3  20190227  47000  47250  46750  46750   8045211\n",
+      "4  20190228  46400  46500  45100  45100  23569321\n",
       "\n",
       "##### Binary Data #####\n",
       "\n",
-      "b'\\x07\\x144\\x01\\x9e\\xb6\\x00\\x00\\x02\\xb7\\x00\\x00R\\xb2\\x00\\x00\\xe2\\xb3\\x00\\x00\\x13\\r\\xa1\\x00\\n\\x144\\x01\\xa4\\xb5\\x00\\x00\\x02\\xb7\\x00\\x00\\x1a\\xb3\\x00\\x00x\\xb4\\x00\\x00\\xb0\\xdf|\\x00\\x0b\\x144\\x01\\x1a\\xb3\\x00\\x00F\\xb4\\x00\\x00\\x8a\\xb1\\x00\\x00~\\xb3\\x00\\x00\\x93\\xddf\\x00\\x0c\\x144\\x01\\x9e\\xb6\\x00\\x00\\xfc\\xb7\\x00\\x00\\xa4\\xb5\\x00\\x004\\xb7\\x00\\x00 \\x94\\xaf\\x00\\r\\x144\\x01\\xa4\\xb5\\x00\\x00`\\xb8\\x00\\x00x\\xb4\\x00\\x00f\\xb7\\x00\\x00\\xf9\\xa8\\x84\\x00\\x0e\\x144\\x01\\xa4\\xb5\\x00\\x00.\\xb8\\x00\\x00r\\xb5\\x00\\x00.\\xb8\\x00\\x00\\x9c8i\\x00\\x11\\x144\\x01(\\xb9\\x00\\x00\\xbe\\xb9\\x00\\x00\\xca\\xb7\\x00\\x00\\xf6\\xb8\\x00\\x00,5r\\x00\\x12\\x144\\x01\\xf6\\xb8\\x00\\x00Z\\xb9\\x00\\x00\\xa4\\xb5\\x00\\x00\\x9e\\xb6\\x00\\x00\\x8b\\xd9y\\x00\\x13\\x144\\x01\\x98\\xb7\\x00\\x00\\x92\\xb8\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9b\\xc2z\\x00\\x14\\x144\\x01@\\xb5\\x00\\x00\\xa4\\xb5\\x00\\x00,\\xb0\\x00\\x00,\\xb0\\x00\\x00\\xa9\\xa3g\\x01'\n",
+      "b'\\x0e\\x144\\x01\\xa4\\xb5\\x00\\x00.\\xb8\\x00\\x00r\\xb5\\x00\\x00.\\xb8\\x00\\x00\\x9c8i\\x00\\x11\\x144\\x01(\\xb9\\x00\\x00\\xbe\\xb9\\x00\\x00\\xca\\xb7\\x00\\x00\\xf6\\xb8\\x00\\x00,5r\\x00\\x12\\x144\\x01\\xf6\\xb8\\x00\\x00Z\\xb9\\x00\\x00\\xa4\\xb5\\x00\\x00\\x9e\\xb6\\x00\\x00\\x8b\\xd9y\\x00\\x13\\x144\\x01\\x98\\xb7\\x00\\x00\\x92\\xb8\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9b\\xc2z\\x00\\x14\\x144\\x01@\\xb5\\x00\\x00\\xa4\\xb5\\x00\\x00,\\xb0\\x00\\x00,\\xb0\\x00\\x00\\xa9\\xa3g\\x01'\n",
       "\n",
       "##### Length of Binary Data #####\n",
       "\n",
-      "240\n",
+      "120\n",
       "\n",
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1hIPlHXYLMW9JuiChShHiPHDPAn_YzPiq', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
+      "{'kind': 'drive#file', 'id': '1wGauYwulWPyjavWgHDb0V8KqcCwEWL-B', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
      ]
     }
    ],
@@ -636,41 +632,21 @@
       "\n",
       "##### Download Start #####\n",
       "\n",
-      "b'\\x07\\x144\\x01\\x9e\\xb6\\x00\\x00\\x02\\xb7\\x00\\x00R\\xb2\\x00\\x00\\xe2\\xb3\\x00\\x00\\x13\\r\\xa1\\x00'\n",
-      "(20190215, 46750, 46850, 45650, 46050, 10554643)\n",
-      "Download 10%\n",
-      "\n",
-      "b'\\n\\x144\\x01\\xa4\\xb5\\x00\\x00\\x02\\xb7\\x00\\x00\\x1a\\xb3\\x00\\x00x\\xb4\\x00\\x00\\xb0\\xdf|\\x00'\n",
-      "(20190218, 46500, 46850, 45850, 46200, 8183728)\n",
-      "Download 20%\n",
-      "\n",
-      "b'\\x0b\\x144\\x01\\x1a\\xb3\\x00\\x00F\\xb4\\x00\\x00\\x8a\\xb1\\x00\\x00~\\xb3\\x00\\x00\\x93\\xddf\\x00'\n",
-      "(20190219, 45850, 46150, 45450, 45950, 6741395)\n",
-      "Download 30%\n",
-      "\n",
-      "b'\\x0c\\x144\\x01\\x9e\\xb6\\x00\\x00\\xfc\\xb7\\x00\\x00\\xa4\\xb5\\x00\\x004\\xb7\\x00\\x00 \\x94\\xaf\\x00'\n",
-      "(20190220, 46750, 47100, 46500, 46900, 11506720)\n",
-      "Download 40%\n",
-      "\n",
-      "b'\\r\\x144\\x01\\xa4\\xb5\\x00\\x00`\\xb8\\x00\\x00x\\xb4\\x00\\x00f\\xb7\\x00\\x00\\xf9\\xa8\\x84\\x00'\n",
-      "(20190221, 46500, 47200, 46200, 46950, 8694009)\n",
-      "Download 50%\n",
-      "\n",
       "b'\\x0e\\x144\\x01\\xa4\\xb5\\x00\\x00.\\xb8\\x00\\x00r\\xb5\\x00\\x00.\\xb8\\x00\\x00\\x9c8i\\x00'\n",
       "(20190222, 46500, 47150, 46450, 47150, 6895772)\n",
-      "Download 60%\n",
+      "Download 20%\n",
       "\n",
       "b'\\x11\\x144\\x01(\\xb9\\x00\\x00\\xbe\\xb9\\x00\\x00\\xca\\xb7\\x00\\x00\\xf6\\xb8\\x00\\x00,5r\\x00'\n",
       "(20190225, 47400, 47550, 47050, 47350, 7484716)\n",
-      "Download 70%\n",
+      "Download 40%\n",
       "\n",
       "b'\\x12\\x144\\x01\\xf6\\xb8\\x00\\x00Z\\xb9\\x00\\x00\\xa4\\xb5\\x00\\x00\\x9e\\xb6\\x00\\x00\\x8b\\xd9y\\x00'\n",
       "(20190226, 47350, 47450, 46500, 46750, 7985547)\n",
-      "Download 80%\n",
+      "Download 60%\n",
       "\n",
       "b'\\x13\\x144\\x01\\x98\\xb7\\x00\\x00\\x92\\xb8\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9e\\xb6\\x00\\x00\\x9b\\xc2z\\x00'\n",
       "(20190227, 47000, 47250, 46750, 46750, 8045211)\n",
-      "Download 90%\n",
+      "Download 80%\n",
       "\n",
       "b'\\x14\\x144\\x01@\\xb5\\x00\\x00\\xa4\\xb5\\x00\\x00,\\xb0\\x00\\x00,\\xb0\\x00\\x00\\xa9\\xa3g\\x01'\n",
       "(20190228, 46400, 46500, 45100, 45100, 23569321)\n",
@@ -760,6 +736,67 @@
     "print(content)\n",
     "print(struct.unpack(\"iiiiii\", content))\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2. Batch Requests\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "Request ID: 1\n",
+      "Response: {'id': '1W9tRlK7zu74Iyls2ijHkNkhVo_ftcQBQ', 'name': 'sub_file2_1.txt', 'mimeType': 'text/plain'}\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "Request ID: 2\n",
+      "Response: {'id': '1RN1rbdGfAlZ0tC87Vxib8c89ySgV2xvj', 'name': 'sub_file2_2.txt', 'mimeType': 'text/plain'}\n",
+      "\n",
+      "##### Result #####\n",
+      "\n",
+      "Request ID: 3\n",
+      "Response: {'id': '12XmKiypLZnuQKpk_-g8wyu_vvQ0QMQxa', 'name': 'sub_file2_3.txt', 'mimeType': 'text/plain'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "FILE_IDS = [\n",
+    "    \"1W9tRlK7zu74Iyls2ijHkNkhVo_ftcQBQ\",\n",
+    "    \"1RN1rbdGfAlZ0tC87Vxib8c89ySgV2xvj\",\n",
+    "    \"12XmKiypLZnuQKpk_-g8wyu_vvQ0QMQxa\",\n",
+    "]\n",
+    "\n",
+    "FIELDS = \"id, name, mimeType\"\n",
+    "\n",
+    "def callback(request_id, response, exception):\n",
+    "    if exception:\n",
+    "        # Handle error\n",
+    "        print(\"\\n##### Exception #####\\n\")\n",
+    "        print(exception)\n",
+    "    else:\n",
+    "        print(\"\\n##### Result #####\\n\")\n",
+    "        print(\"Request ID: {0}\".format(request_id))\n",
+    "        print(\"Response: {0}\".format(response))\n",
+    "\n",
+    "batch = drive.new_batch_http_request(callback=callback)\n",
+    "batch.add(drive.files().get(fileId=FILE_IDS[0], fields=FIELDS))\n",
+    "batch.add(drive.files().get(fileId=FILE_IDS[1], fields=FIELDS))\n",
+    "batch.add(drive.files().get(fileId=FILE_IDS[2], fields=FIELDS))\n",
+    "batch.execute()"
    ]
   }
  ],
