오늘은 여기까지

--- a/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
+++ b/190413_GoogleDrive_JunHyeong/using_google_drive.ipynb
@@ -200,7 +200,7 @@
       "\n",
       "##### nextPageToken #####\n",
       "\n",
-      "~!!~AI9FV7T59la2smTVqJH4x-lqS0AOLqo5pY4tXG1PeRuKQMceOMFKU4LIxZfkBLIcyfxYMlxFjDReagWwhI_VYeP45ecbwGYk2IK7r7hPl92FXUDDMORy69ThlelKNRDIkB4vP01xcRPT2bZivEjptPvjHiESTHXfzkh5z4BaW3jzP1gafAdvA-hQVOjbuDlw433ZcY4QugsNR3AWvcfuhMX7AOmYjDKacZGXljQHdkj0_jeeSoLwph7JVKA1cLajBX43FYoUqQwXBZRJYdYi5I2hRDY850pCgR8ZGIiwtfc_Js1gbg2ij8XBNDfraVHRcYHj5JdJqu5gV3oOKLFTHIEr5h8RleIf44ADy-3BnhAo7yekIUsdP9I=\n",
+      "~!!~AI9FV7S5VqiKETIZEDpR9dbC4ibrDxLayLpFdkyxtMfhkbd5_dmpc4zusmKD0i6vxZtqa5lm5wG63ZVTpKAhLmhx8GM5ygYYP6r0WPfsI93yWiielcccsGAXOg-fROqz7GHzx-xy7eyKya6OJ8OT1inJsj7m_GGSBCioSMmQNU_dpivY8OZ5HxIyYsX93s3YnJ8cfFSPv2DeYCrqNLDRVkOx4G3Q-GHvUWAm44ZHHUYaOcfphSBe_nacFthPnHrNNpRc8C0bA4dZAZOmS_PS5KoRRUGUWMVuP0Zv9uUZzIRVmeVe38DptmHIbqCuVrXpu8aQtJIhIHqtYtR3O9DRGb535zAdxgFEkJtssaO5QzFUke4xNf4QcjE=\n",
       "\n",
       "##### List of Metadata #####\n",
       "\n",
@@ -373,7 +373,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1XuidDMUCSsDHuhUXDvbUsXL8AuFmbdm7', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1WHeY8hm7vIkkg0Kb9uI-7VGF9CFFbYs0', 'name': 'file_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1Sn6adya8VU33nnrIhxZb7EEIr7Th_eiA', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1xYs3HCPKHpDsUrmjC4IX6uu5gs43D0pM', 'name': 'mem_up_test.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -462,7 +462,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1Sn6adya8VU33nnrIhxZb7EEIr7Th_eiA', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
+      "{'kind': 'drive#file', 'id': '1xYs3HCPKHpDsUrmjC4IX6uu5gs43D0pM', 'name': 'mem_up_test2.txt', 'mimeType': 'text/plain'}\n"
      ]
     }
    ],
@@ -572,7 +572,7 @@
       "\n",
       "##### Upload Result #####\n",
       "\n",
-      "{'kind': 'drive#file', 'id': '1wGauYwulWPyjavWgHDb0V8KqcCwEWL-B', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
+      "{'kind': 'drive#file', 'id': '105wE60SlcJP0nteS4v4-OxIfj9lu_TMA', 'name': 'day_005930.bry', 'mimeType': 'application/octet-stream'}\n"
      ]
     }
    ],
@@ -691,65 +691,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1.3. 원하는 범위만 다운로드\n",
-    "***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nFILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\\nSTRUCT_SIZE = 24\\nRCV_DATA_IDX = 2\\n\\nst_pos = (STRUCT_SIZE * RCV_DATA_IDX)\\ned_pos = st_pos + STRUCT_SIZE - 1\\n\\nheaders = {\\n    \"Range\": \"bytes={0}-{1}\".format(st_pos, ed_pos)\\n}\\n\\nresp, content = http_auth.request(\\n    uri=\"https://www.googleapis.com/drive/v3/files/{0}?alt=media\".format(FILE_ID),\\n    headers=headers\\n)\\n\\nprint(\"\\n##### response #####\\n\")\\npprint.pprint(resp)\\n\\nprint(\"\\n##### content #####\\n\")\\nprint(content)\\nprint(struct.unpack(\"iiiiii\", content))\\n'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "FILE_ID = response[\"id\"]  # 다운로드 받을 파일의 ID\n",
-    "STRUCT_SIZE = 24\n",
-    "RCV_DATA_IDX = 2\n",
-    "\n",
-    "st_pos = (STRUCT_SIZE * RCV_DATA_IDX)\n",
-    "ed_pos = st_pos + STRUCT_SIZE - 1\n",
-    "\n",
-    "headers = {\n",
-    "    \"Range\": \"bytes={0}-{1}\".format(st_pos, ed_pos)\n",
-    "}\n",
-    "\n",
-    "resp, content = http_auth.request(\n",
-    "    uri=\"https://www.googleapis.com/drive/v3/files/{0}?alt=media\".format(FILE_ID),\n",
-    "    headers=headers\n",
-    ")\n",
-    "\n",
-    "print(\"\\n##### response #####\\n\")\n",
-    "pprint.pprint(resp)\n",
-    "\n",
-    "print(\"\\n##### content #####\\n\")\n",
-    "print(content)\n",
-    "print(struct.unpack(\"iiiiii\", content))\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3.2. Batch Requests\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -797,6 +748,121 @@
     "batch.add(drive.files().get(fileId=FILE_IDS[1], fields=FIELDS))\n",
     "batch.add(drive.files().get(fileId=FILE_IDS[2], fields=FIELDS))\n",
     "batch.execute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3. Google Sheets\n",
+    "***\n",
+    "\n",
+    "\n",
+    "### 3.3.1. Google Sheets API 사용설정\n",
+    "***\n",
+    "\n",
+    "\n",
+    "### 3.3.2. 종목정보 생성\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "##### Create Result #####\n",
+      "\n",
+      "{'properties': {'autoRecalc': 'ON_CHANGE',\n",
+      "                'defaultFormat': {'backgroundColor': {'blue': 1,\n",
+      "                                                      'green': 1,\n",
+      "                                                      'red': 1},\n",
+      "                                  'padding': {'bottom': 2,\n",
+      "                                              'left': 3,\n",
+      "                                              'right': 3,\n",
+      "                                              'top': 2},\n",
+      "                                  'textFormat': {'bold': False,\n",
+      "                                                 'fontFamily': 'arial,sans,sans-serif',\n",
+      "                                                 'fontSize': 10,\n",
+      "                                                 'foregroundColor': {},\n",
+      "                                                 'italic': False,\n",
+      "                                                 'strikethrough': False,\n",
+      "                                                 'underline': False},\n",
+      "                                  'verticalAlignment': 'BOTTOM',\n",
+      "                                  'wrapStrategy': 'OVERFLOW_CELL'},\n",
+      "                'locale': 'ko_KR',\n",
+      "                'timeZone': 'Etc/GMT',\n",
+      "                'title': 'codetbl_20190410'},\n",
+      " 'sheets': [{'properties': {'gridProperties': {'columnCount': 26,\n",
+      "                                               'rowCount': 1000},\n",
+      "                            'index': 0,\n",
+      "                            'sheetId': 0,\n",
+      "                            'sheetType': 'GRID',\n",
+      "                            'title': '시트1'}}],\n",
+      " 'spreadsheetId': '1qQL_HxxFGbgT1DT4bHA4WzJ9p7AoVLKSy3OWHMvCivE',\n",
+      " 'spreadsheetUrl': 'https://docs.google.com/a/llit.kr/spreadsheets/d/1qQL_HxxFGbgT1DT4bHA4WzJ9p7AoVLKSy3OWHMvCivE/edit'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "sheets = build('sheets', 'v4', credentials=creds)\n",
+    "\n",
+    "FOLDER_ID = \"1nWQXXoOGoOIsEJk5GLvUmVqWACWy53Ho\"  # 여기에 생성\n",
+    "\n",
+    "meta_data = {\n",
+    "    \"properties\": {\n",
+    "        \"title\": \"codetbl_{0}\".format(datetime.date.today().strftime(\"%Y%m%d\"))\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "response = sheets.spreadsheets().create(body=meta_data).execute()\n",
+    "print(\"\\n\\n##### Create Result #####\\n\")\n",
+    "pprint.pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "##### Raw Data #####\n",
+      "\n",
+      "       fullcode  shtcode       name\n",
+      "0  KR7005930003  A005930       삼성전자\n",
+      "1  KR7046890000  A046890      서울반도체\n",
+      "2  KR7069500007  A069500  KODEX 200\n",
+      "3  KR7114800006  A114800  KODEX 인버스\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"code_info.csv\")\n",
+    "print(\"\\n##### Raw Data #####\\n\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILE_ID = response[\"spreadsheetId\"]"
    ]
   }
  ],
